--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
         color: antiquewhite;
         line-height: 40px;
     }
+
+    h3{
+        font-size: 20px;
+        font-family: Bebon;
+        color: antiquewhite;
+        line-height: 26px;
+    }
     </style>
     </head>
     
@@ -67,6 +74,9 @@
             <div class="column right">
                 <h2>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z . -</h2>
                 <h1>KKK</h1>
+                <h3>* LETTERS SEEM UNEVEN - LIKE S LOOKS THINNER THAN K??</h3>
+                <h3>* I REALLY LIKE THE "MIXED" EFFECT OF ONE OF THE VF SO CAN I ACTUALLY ACHIEVE IT??</h3>
+                <h3>* HOW TO KERN SPECIFIC COMBINATIONS - LIKE VA??</h3>
             </div>
         </div>
 
