--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 <h3>* LETTERS SEEM UNEVEN - LIKE S LOOKS THINNER THAN K??</h3>
                 <h3>* I REALLY LIKE THE "MIXED" EFFECT OF ONE OF THE VF SO CAN I ACTUALLY ACHIEVE IT??</h3>
                 <h3>* HOW TO KERN SPECIFIC COMBINATIONS - LIKE VA??</h3>
+                <h3>* CAN I RESET THE KERNING AS LETTERS GET WIDER??</h3>
             </div>
         </div>
 
